[package]
name = "pon"
version = "0.1.0"
edition = "2021"

[dependencies]
# fxhash = "0.2.1"
# hashbrown = { version = "0.12", features = ["inline-more"], default-features = false }
petgraph = "0.6.2"
# hdf5 = "0.8.1"
ndarray = {version = "0.15", features = ["serde"] }
rand = { version = "0.8.5", features = ["small_rng"] }
ordered-float = "3.0"
approx = "0.5.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rayon = { version = "1.5" }
itertools = "0.10"
indicatif = "0.17.0-rc.11"
jemallocator = { version = "0.5" }


[profile.release]
# TODO: bechmark this: opt-level=3
lto = true
codegen-units = 1
